# Shoop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
design/: architecture.graphml
scripts/: plot_loss.py  plot_train_score.py
src/: game.cpp  game.hpp  main.cpp  resources.cpp  resources.hpp
src/gameplay/: scene.cpp  scene.hpp
src/gameplay/bots/: evaluation.cpp  evaluation.hpp  learning.cpp  learning.hpp
src/gameplay/core/: actor.cpp  actor.hpp  component.cpp  component.hpp  singlecomponentactor.hpp
src/gameplay/elements/: factory.cpp  factory.hpp  ground.cpp  ground.hpp  lifetimecomponent.cpp  lifetimecomponent.hpp  physicalparticle.cpp  physicalparticle.hpp  physicscomponent.cpp  physicscomponent.hpp  spriteomponent.cpp  spriteomponent.hpp  textcomponent.cpp  textcomponent.hpp  wall.cpp  wall.hpp
src/gameplay/elements/player/: Balancercomponent.cpp  Balancercomponent.hpp  aicontrollercomponent.cpp  aicontrollercomponent.hpp  controllercomponent.cpp  controllercomponent.hpp  jumpcomponent.cpp  jumpcomponent.hpp  playercontrollercomponent.cpp  playercontrollercomponent.hpp  remotecontrol.cpp  remotecontrol.hpp  sheep.cpp  sheep.hpp
src/gameplay/maps/: map.cpp  map.hpp
src/gameplay/rules/: classic.cpp  classic.hpp  gamerules.cpp  gamerules.hpp
src/gamestates/: gamestate.hpp  gsplay.cpp  gsplay.hpp  gsstart.cpp  gsstart.hpp
src/generators/: curve.cpp  curve.hpp  random.cpp  random.hpp
src/graphics/: device.cpp  device.hpp
src/input/: abstactinput.hpp  actions.hpp  device.hpp  gamepadinputmanager.cpp  gamepadinputmanager.hpp  input.hpp  inputmanager.cpp  inputmanager.hpp  keyboardinputmanager.cpp  keyboardinputmanager.hpp  serialization.cpp  serialization.hpp
src/math/: functions.hpp  helpers.hpp  transformation.cpp  transformation.hpp  vector.hpp
src/utils/: assert.cpp  assert.hpp  config.cpp  config.hpp
